# kiro-genETL

./: OVERVIEW.md  README.md  design_v2.md  design_v3.md  design_v4.md  pyproject.toml  requirements_v1.md  requirements_v2.md  requirements_v4.md  tasks_v3.md
config/: transformation_rules.csv
dbt_job_generator/: __init__.py  cli.py
dbt_job_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dbt_job_generator/assembler/: config_block.py  from_clause.py  model_assembler.py
dbt_job_generator/batch/: batch_processor.py
dbt_job_generator/catalog/: __init__.py
dbt_job_generator/change_manager/: __init__.py  change_manager.py
dbt_job_generator/cte_builder/: pipeline_builder.py
dbt_job_generator/dag/: dag_builder.py
dbt_job_generator/engine/: generator_engine.py
dbt_job_generator/models/: change.py  mapping.py  validation.py
dbt_job_generator/parser/: __init__.py  csv_parser.py
dbt_job_generator/report/: review_report.py
dbt_job_generator/spark_test_gen/: __init__.py  spark_test_generator.py
dbt_job_generator/udfs/: __init__.py
dbt_job_generator/validator/: schema_validator.py
output/silver/: .generation_log.json  fund_management_company.sql  involved_party_electronic_address.sql  review_report.md
tests/: test_batch_processor.py  test_change_manager.py  test_csv_parser.py  test_cte_builder.py  test_dag_builder.py  test_generator_engine.py  test_mapping_validator.py  test_model_assembler.py  test_pipeline.py  test_pretty_printer.py  test_rule_catalog.py  test_spark_test_generator.py  test_test_generator.py
(+24 files in other folders)
